# Riotee_ProbeSoftware

./: .bumpversion.cfg  .gitmodules  52-riotee.rules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build-firmware.yml  build-tool.yml  cmake.yml  release-firmware.yml  release-tool.yml  unittest-tool.yml
boards/: riotee_probe.h
firmware/: CMakeLists.txt
firmware/boards/: riotee_board.h  riotee_probe.h
firmware/include/: delay.h  probe_gpio.h  rioteeprobe_config.h  sbw_device.h  sbw_protocol.h  sbw_transport.h
firmware/src/: FreeRTOSConfig.h  cdc_uart.h  main.c  probe_gpio.c  probe_vendor.c  sbw_device.c  sbw_jtag.c  sbw_transport.c  swd_transport.h  tusb_config.h  usb_descriptors.c
include/: DAP_config.h  delay.h  rioteeprobe_config.h  sbw_device.h  sbw_jtag.h  sbw_protocol.h
src/: FreeRTOSConfig.h  cdc_uart.c  main.c  sbw_device.c  sbw_transport.c  swd_transport.c  swd_transport.h  tusb_config.h  usb_descriptors.c
tool/: LICENSE.txt  pyproject.toml
tool/riotee_probe/: __init__.py  cli.py  intelhex.py  probe.py  protocol.py  session.py  target.py
tool/tests/: test_cli.py
