[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "riotee-probe"
authors = [{name = "Kai Geissdoerfer", email = "info@nessie-circuits.de"}]
license = {file = "LICENSE.txt"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "intelhex",
    "click>=8.1.0",
    "pyserial",  # TODO: not used
    "progress",
    "pyocd",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-click",
]

[project.scripts]
riotee-probe = "riotee_probe.cli:cli"

[project.urls]
Homepage = "https://pypi.org/project/riotee_probe"
Documentation = "https://www.riotee.nessie-circuits.de"
Source = "https://github.com/NessieCircuits/Riotee_ProbeSoftware"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-vvv"
